--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1136,7 +1136,7 @@ img {
   bottom: 0; }
 
 .main-articles {
-  padding: 75px 0 150px;
+  padding: 15px 0 150px;
   background: white; }
 
 .column-title {
@@ -1172,15 +1172,20 @@ img {
   line-height: inherit;
   font-family: inherit; }
 .column .column-header {
-  border-bottom: 1px solid #ddd; }
+  position: relative; }
   .column .column-header .top {
+    position: absolute;
+    width: 100%;
     background: black;
+    background: rgba(0, 0, 0, 0.7);
     padding: 15px; }
     .column .column-header .top .byline {
       color: white; }
       .column .column-header .top .byline .author-image {
         height: 30px;
         width: 30px; }
+  .column .column-header .column-image {
+    width: 100%; }
   .column .column-header .title {
     font-size: 30px;
     line-height: 1.3;
@@ -1200,14 +1205,15 @@ img {
     width: 100%;
     border: none;
     outline: none; }
-  .column .column-header .ap-image {
-    background: white;
-    margin-bottom: 0;
-    padding-bottom: 0; }
   .column .column-header .date {
-    color: #999;
-    display: block;
-    margin-top: 15px; }
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    bottom: 0;
+    right: 0;
+    padding: 0 15px;
+    line-height: 2;
+    margin-bottom: 0; }
   .column .column-header .approved-check {
     display: inline-block;
     float: right; }
@@ -1230,6 +1236,14 @@ img {
     display: none; }
   .column .column-header .active .close-link {
     display: block; }
+.column .date {
+  text-align: center; }
+.column .ap-image {
+  background: white;
+  margin-bottom: 0;
+  padding-bottom: 0px;
+  line-height: 2;
+  border-bottom: 1px solid #ddd; }
 
 hr.bottom {
   margin: 40px 0 20px; }
@@ -1252,7 +1266,8 @@ hr.bottom {
 .column-sidebar {
   position: fixed;
   width: 100%;
-  padding-left: 15px; }
+  padding-left: 15px;
+  top: 115px; }
 
 .author-badge {
   background: #ddd;
@@ -1484,7 +1499,7 @@ a:hover {
   margin: 20px 0 0; }
 
 .home-column-sidebar {
-  margin: 0;
+  margin: 0 0 15px;
   max-height: 450px; }
 
 .home-column-sidebar.expanded {
@@ -1767,6 +1782,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 h1, h2, h3 {
   font-weight: bold; }
 
+.home .mobile {
+  display: none; }
+
 @media (min-width: 992px) {
   .lockerroom .lockerroom-controls .author-image-wrap .author-image {
     height: 100px;
@@ -1792,14 +1810,26 @@ h1, h2, h3 {
   .column .column-header .byline {
     display: inline-block;
     margin: 15px 0 15px;
-    float: right; }
+    position: absolute;
+    bottom: -20px;
+    right: 15px; }
+    .column .column-header .byline .player-name {
+      background: black;
+      color: white;
+      line-height: 1.6;
+      display: inline-block;
+      padding: 0 30px 0 15px;
+      margin-right: -15px;
+      border: 1px solid red;
+      border-left: none; }
   .column .column-header .date {
-    color: #999;
-    display: inline-block;
-    margin: 15px 0 15px;
-    float: left; } }
+    display: none; } }
 
 @media (max-width: 480px) {
+  .home .mobile {
+    display: inline-block; }
+  .home .desktop, .home .masthead {
+    display: none; }
   .lines-button {
     display: inline-block;
     cursor: pointer;
@@ -1928,18 +1958,25 @@ h1, h2, h3 {
     margin: 0; }
   .column .column-header {
     text-align: center; }
+    .column .column-header .top {
+      padding: 0 15px; }
     .column .column-header .title {
-      font-size: 30px; }
-    .column .column-header .date, .column .column-header .byline {
-      display: block;
-      float: none; }
+      font-size: 15px;
+      margin-bottom: 0;
+      line-height: 2.5; }
+    .column .column-header .date {
+      display: none; }
+    .column .column-header .byline {
+      bottom: -15px; }
+      .column .column-header .byline .author-image {
+        height: 50px;
+        width: 50px; }
   .column .subtitle {
     font-size: 18px; }
+  .column .date {
+    display: none; }
   .medium-article .headline .inner-content .copy h3 {
     font-size: 18px; }
-  .author-image {
-    height: 30px;
-    width: 30px; }
   .topbar .right-side {
     display: none; }
   .topbar .right-side.active {
@@ -1960,7 +1997,9 @@ h1, h2, h3 {
   .podcast_label {
     font-size: 20px; }
   .podcast_progress, .podcast_title {
-    display: none; } }
+    display: none; }
+  .podcast_label {
+    text-shadow: none; } }
 
 div[id^="grabDiv"] {
   width: 100% !important;
