--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1482,7 +1482,7 @@ img {
 }
 
 .main-articles {
-	padding: 75px 0 150px;
+	padding: 15px 0 150px;
 	background: white;
 }
 
@@ -1529,8 +1529,12 @@ img {
 	}
 
 	.column-header {
+		position: relative;
 		.top {
+			position: absolute;
+			width: 100%;
 			background: black;
+			background: rgba(0,0,0,0.7);
 			padding: 15px;
 			.byline {
 				color: white;
@@ -1541,7 +1545,9 @@ img {
 			}
 		}
 		
-		border-bottom: 1px solid #ddd;
+		.column-image {
+			width: 100%;
+		}
 		.title {
 			font-size: 30px;
 			line-height: 1.3;
@@ -1568,15 +1574,21 @@ img {
 			}
 
 		}
-		.ap-image {
-			background: white;
+		// .date {
+		// 	color: #999;
+		// 	display: block;
+		// 	margin-top: 15px;
+		// }
+
+		.date{
+			position: absolute;
+			background: rgba(0,0,0,0.7);
+			color: white;
+			bottom: 0;
+			right: 0;
+			padding: 0 15px;
+			line-height: 2;
 			margin-bottom: 0;
-			padding-bottom: 0;
-		}
-		.date {
-			color: #999;
-			display: block;
-			margin-top: 15px;
 		}
 	
 		.approved-check {
@@ -1611,6 +1623,18 @@ img {
 			display: block;
 		}
 	}
+	.date {
+		text-align: center;
+	}
+
+	.ap-image {
+		background: white;
+		margin-bottom: 0;
+		padding-bottom: 0px;
+		line-height: 2;
+		border-bottom: 1px solid #ddd;
+	}
+
 }
 
 
@@ -1641,6 +1665,7 @@ hr.bottom{
 	position: fixed;
 	width: 100%;
 	padding-left: 15px;
+	top: 115px;
 }
 
 .author-badge {
@@ -1943,7 +1968,7 @@ a:hover {
 }
 
  .home-column-sidebar {
- 	margin: 0;
+ 	margin: 0 0 15px;
  	max-height: 450px;
  }
 
@@ -2310,6 +2335,10 @@ h1, h2, h3 {
 	font-weight: bold;
 }
 
+.home .mobile {
+	display: none;
+}
+
 @media (min-width: 992px) {
 	.lockerroom .lockerroom-controls .author-image-wrap .author-image{
 		height: 100px;
@@ -2349,20 +2378,36 @@ h1, h2, h3 {
 			.byline {
 				display: inline-block;
 				margin: 15px 0 15px;
-				float: right;
+				position: absolute;
+				bottom: -20px;
+				right: 15px;
+				.player-name {
+					background: black;
+					color: white;
+					line-height: 1.6;
+					display: inline-block;
+					padding: 0 30px 0 15px;
+					margin-right: -15px;
+					border: 1px solid red;
+					border-left: none;
+				}
 			}
 			.date {
-				color: #999;
-				display: inline-block;
-				margin: 15px 0 15px;
-				float: left;
+				display: none;
 
 			}
 		}
 	}
 }
 
+
 @media (max-width: 480px) {
+	.home .mobile {
+		display: inline-block;
+	}
+	.home .desktop, .home .masthead {
+		display: none;
+	}
 	.lines-button {
 		display: inline-block;
 		cursor: pointer;
@@ -2563,24 +2608,34 @@ h1, h2, h3 {
 	.column {
 		.column-header {
 			text-align: center;
-			.title {
-				font-size: 30px;
+			.top {
+				  padding: 0 15px;
 			}
-			.date, .byline {
-				display: block;
-				float: none;
+			.title {
+				font-size: 15px;
+				margin-bottom: 0;
+				line-height: 2.5;
+			}
+			.date {
+				display: none;
+			}
+			.byline {
+				bottom: -15px;
+				.author-image {
+					height: 50px;
+					width: 50px;
+				}
 			}
 		}
 		.subtitle {
 			font-size: 18px;
 		}
+		.date {
+			display: none;
+		}
 	}
 	.medium-article .headline .inner-content .copy h3 {
 		font-size: 18px;
-	}
-	.author-image {
-		height: 30px;
-		width: 30px;
 	}
 
 	.topbar {
@@ -2624,6 +2679,10 @@ h1, h2, h3 {
 
 	.podcast_progress, .podcast_title {
 		display: none;
+	}
+
+	.podcast_label {
+		text-shadow: none;
 	}
 }
 
