--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
 
 			<div class="row mobile">
 				<%	for (i = 0; i < 5; i++) { %>
-				<div class="col-md-3">
+				<div class="col-md-3<% if (i == 0) { %> first<% } %>">
 					<% entry = entries[i]%><%= include medium-select %>
 				</div>
 				<% } %>
