Re order homepage a bit, overflow hidden on Most Recent

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -845,7 +845,7 @@ img {
   padding: 20px;
   line-height: 15px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .close-lockerroom-responses:hover {
@@ -864,7 +864,7 @@ img {
   top: 50%;
   margin-top: -21px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .next-lockerroom-response:hover {
@@ -883,7 +883,7 @@ img {
   top: 50%;
   margin-top: -21px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .prev-lockerroom-response:hover {
@@ -1170,7 +1170,7 @@ img {
 .column .column-content-wrapper p:first-child:first-letter {
   float: left;
   display: block;
-  margin: .15em .15em 0 0;
+  margin: 0.15em 0.15em 0 0;
   font-weight: 900;
   font-size: 75px;
   line-height: 50px;
