no name changing and facebook comments

--- a/views/column.ejs
+++ b/views/column.ejs
@@ -22,15 +22,15 @@
 							<% } %>
 						</div>
 					<% } %>
-				
+
 					<p class="date"><%= column.updated_at %></p>
-					
+
 				</div>
-				
+
 
 
 				<% if (column.main_image.caption) { %><p class="ap-image"><%= column.main_image.caption %></p><% } %>
-				
+
 				<% if ( column.subtitle ) { %>
 					<h3 class="subtitle"><%= column.subtitle %></h3>
 				<% } %>
@@ -62,7 +62,7 @@
 						<%}%>
 					<% }); %>
 
-				</div>				
+				</div>
 			</div>
 			<% if (column.type != 'locks' || column.type != 'wwkjd') { %>
 			<div class="col-md-4">
@@ -114,12 +114,12 @@
 					  <span class="fa fa-facebook"></span> Share on Facebook
 					</a>
 				</div>
-			</div>		
+			</div>
 	</div>
 	<div class="row">
 		<div class="col-md-8">
-			
-		  <div id="disqus_thread"></div>
+
+		  <!-- <div id="disqus_thread"></div>
 	    <script type="text/javascript">
 	        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	        var disqus_shortname = 'footballbyfootball'; // required: replace example with your forum shortname
@@ -132,7 +132,18 @@
 	        })();
 	    </script>
 	    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+	    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a> -->
+
+			<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			  var js, fjs = d.getElementsByTagName(s)[0];
+			  if (d.getElementById(id)) return;
+			  js = d.createElement(s); js.id = id;
+			  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=832186156805952";
+			  fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
+
+			<div class="fb-comments" data-href="http://footballbyfootball.com/column/<%= column.slug %>" data-numposts="5"></div>
     </div>
 	</div>
 </div>
