--- a/views/lockerroom.ejs
+++ b/views/lockerroom.ejs
@@ -14,7 +14,7 @@
 			<span class="close-lockerroom-responses">×</span>
 			<span class="next-lockerroom-response"></span>
 			<span class="prev-lockerroom-response"></span>
-			<div class="container response-wrapper">		
+			<div class="container response-wrapper">
 				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
 					<div class="row response" id="<%= entry.player._id %>">
 						<span class="lockerroom-response-player">
@@ -51,7 +51,7 @@
 						</span>
 					</div>
 				<% });%>
-			</div>		
+			</div>
 		</div>
 	</div>
 
@@ -82,7 +82,7 @@
 					</div>
 				<% }); %>
 				<div class="row">
-    			<div id="disqus_thread"></div>
+    			<!-- <div id="disqus_thread"></div>
 					<script type="text/javascript">
 			        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 			        var disqus_shortname = 'footballbyfootball'; // required: replace example with your forum shortname
@@ -96,7 +96,19 @@
 			    </script>
 			    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-			    
+			     -->
+
+					 <div id="fb-root"></div>
+					 <script>(function(d, s, id) {
+						 var js, fjs = d.getElementsByTagName(s)[0];
+						 if (d.getElementById(id)) return;
+						 js = d.createElement(s); js.id = id;
+						 js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=832186156805952";
+						 fjs.parentNode.insertBefore(js, fjs);
+					 }(document, 'script', 'facebook-jssdk'));</script>
+
+					 <div class="fb-comments" data-href="http://footballbyfootball.com/lockerroom/<%= lockerroom.slug %>" data-numposts="5"></div>
+
 				</div>
 			</div>
 			<div class="col-md-4">
