--- a/views/column.ejs
+++ b/views/column.ejs
@@ -116,6 +116,7 @@
 				</div>
 			</div>
 	</div>
+	<% if (column.approved) { %>
 	<div class="row">
 		<div class="col-md-8">
 
@@ -146,6 +147,7 @@
 			<div class="fb-comments" data-href="http://footballbyfootball.com/column/<%= column.slug %>" data-numposts="5"></div>
     </div>
 	</div>
+	<% } %>
 </div>
 </div>
 
