--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -35,11 +35,11 @@
 				<p>© Football By Football, LLC
 				<p>All Rights Reserved
 			</div>
-		
+
 	</div>
 	<script src="/js/app.js"></script>
 
-	<script type="text/javascript" src="/js/podcast.min.js"></script>
+	<script type="text/javascript" src="/js/podcast_square.min.js"></script>
 
 	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
 
@@ -53,6 +53,6 @@
 	  ga('send', 'pageview');
 
 	</script>
-	
+
 </body>
 </html>
