--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,19 +13,23 @@
 				</div>
 				<div class="col-md-6">
 					<div class="row">
-						<div class="col-md-6">
-							<% entry = entries[2]%><%= include medium-select %>
+						<!-- <div class="col-md-6">
+							 <% entry = entries[2]%><%= include medium-select %> \
 						</div>
 						<div class="col-md-6">
 							<script src="https://www.googletagservices.com/tag/js/gpt.js">
 								googletag.pubads().definePassback("/20893548/yb/footballbyfootball",
 								[300,250]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 							</script>
-						</div>
+						</div> -->
+						<div class="podcast_square" id="podcast_square"></div>
 					</div>
 					<div class="row">
-						<div class="col-md-6"><% entry = entries[3]%><%= include medium-select %></div>
-						<div class="col-md-6"><% entry = entries[4]%><%= include medium-select %></div>
+						<!-- <div class="col-md-6"><% entry = entries[3]%><%= include medium-select %></div>
+						<div class="col-md-6"><% entry = entries[4]%><%= include medium-select %></div> -->
+						<div class="embed-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/O4ZaELnopTU" frameborder="0" allowfullscreen="" kwframeid="1"></iframe>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -39,7 +43,7 @@
 					<div class="home-column-sidebar">
 						<div class="home-column-overlay"><span class="up_arrow"></span></div>
 						<h2 class="lr-sidebar-title">Most Recent</h2>
-						<%	entries.splice(5,10).forEach(function(entry, index){ %>
+						<%	entries.splice(2,6).forEach(function(entry, index){ %>
 							<% if (entry.type != 'lockerroom') { %>
 								<h5 class="lr-sidebar-link"><a href="/column/<%= entry.slug %>"><%= entry.title %></a></h5>
 							<% } else { %>
@@ -72,7 +76,7 @@
 					<div class="home-column-sidebar">
 						<div class="home-column-overlay"><span class="up_arrow"></span></div>
 						<h2 class="lr-sidebar-title">Most Recent</h2>
-						<%	entries.splice(5,10).forEach(function(entry, index){ %>
+						<%	entries.splice(2,6).forEach(function(entry, index){ %>
 							<% if (entry.type != 'lockerroom') { %>
 								<h5 class="lr-sidebar-link"><a href="/column/<%= entry.slug %>"><%= entry.title %></a></h5>
 							<% } else { %>
@@ -101,7 +105,7 @@
 				<div class="col-md-8">
 						<%	entries.filter(function(item){
 									return item.updated_at != first_date;
-								}).splice(5,15).forEach(function(entry, index){ %>
+								}).splice(2,11).forEach(function(entry, index){ %>
 							<% if (entry.type == 'lockerroom'){ %>
 								<div class="small-entry cf">
 									<div class="col-md-4">
