--- a/views/podcast/new.ejs
+++ b/views/podcast/new.ejs
@@ -9,7 +9,14 @@
         	<p>
         		<input type="text" name="title" placeholder="Title" >
         	</p>
-        	
+
+					<p>
+						<select name="type">
+							<option value="nfl">NFL in the Game</option>
+							<option value="college">CFB Breakdown</option>
+						</select>
+        	</p>
+
 					<p>
 						<input type="text" name="podcast" placeholder="Podcast URL" >
 					</p>
@@ -20,7 +27,7 @@
 
 					<input type="submit" value="Submit">
 				</div>
-			</form>	
+			</form>
 		</div>
 	</div>
 </div>
