--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 					<% entry = entries[0]%><%= include big-select %>
 				</div>
 				<div class="col-md-6">
-					<div class="row">
+					<div class="row podcast_wrap">
 						<!-- <div class="col-md-6">
 							 <% entry = entries[2]%><%= include medium-select %> \
 						</div>
@@ -22,7 +22,8 @@
 								[300,250]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 							</script>
 						</div> -->
-						<div class="podcast_square" id="podcast_square"></div>
+						<div class="podcast_square" id="podcast_college"></div>
+						<div class="podcast_square" id="podcast_nfl"></div>
 					</div>
 					<div class="row">
 						<!-- <div class="col-md-6"><% entry = entries[3]%><%= include medium-select %></div>
