--- a/views/podcast/edit.ejs
+++ b/views/podcast/edit.ejs
@@ -9,7 +9,14 @@
         	<p>
         		<input type="text" name="title" placeholder="Title" value="<%= podcast.title %>">
         	</p>
-        	
+
+					<p>
+						<select name="type">
+							<option value="nfl" <% if (podcast.type == 'nfl') { %>selected<% } %>>NFL in the Game</option>
+							<option value="college" <% if (podcast.type == 'college') { %>selected<% } %>>CFB Breakdown</option>
+						</select>
+					</p>
+
 					<p>
 						<input type="text" name="podcast" placeholder="Podcast URL" value="<%= podcast.podcast %>">
 					</p>
@@ -20,7 +27,7 @@
 
 					<input type="submit" value="Submit">
 				</div>
-			</form>	
+			</form>
 		</div>
 	</div>
 </div>
