--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -53,6 +53,16 @@
 	  ga('send', 'pageview');
 
 	</script>
-
+	<script>
+		var _prum = [['id', '56205857abe53dc11402d0de'],
+		             ['mark', 'firstbyte', (new Date()).getTime()]];
+		(function() {
+		    var s = document.getElementsByTagName('script')[0]
+		      , p = document.createElement('script');
+		    p.async = 'async';
+		    p.src = '//rum-static.pingdom.net/prum.min.js';
+		    s.parentNode.insertBefore(p, s);
+		})();
+	</script>
 </body>
 </html>
