--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -43,26 +43,28 @@
 
 	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<% if (process.env.NODE_ENV == "production") { %>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-54388832-1', 'auto');
-	  ga('send', 'pageview');
+		  ga('create', 'UA-54388832-1', 'auto');
+		  ga('send', 'pageview');
 
-	</script>
-	<script>
-		var _prum = [['id', '56205857abe53dc11402d0de'],
-		             ['mark', 'firstbyte', (new Date()).getTime()]];
-		(function() {
-		    var s = document.getElementsByTagName('script')[0]
-		      , p = document.createElement('script');
-		    p.async = 'async';
-		    p.src = '//rum-static.pingdom.net/prum.min.js';
-		    s.parentNode.insertBefore(p, s);
-		})();
-	</script>
+		</script>
+		<script>
+			var _prum = [['id', '56205857abe53dc11402d0de'],
+			             ['mark', 'firstbyte', (new Date()).getTime()]];
+			(function() {
+			    var s = document.getElementsByTagName('script')[0]
+			      , p = document.createElement('script');
+			    p.async = 'async';
+			    p.src = '//rum-static.pingdom.net/prum.min.js';
+			    s.parentNode.insertBefore(p, s);
+			})();
+		</script>
+	<% } %>
 </body>
 </html>
