--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -44,6 +44,7 @@
 	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
 
 	<% if (process.env.NODE_ENV == "production") { %>
+		<!-- Monitoring scripts -->
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
